templates/whatsapp_template.yaml
---
# Source: whatsapp/templates/coreapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-whatsapp-coreapp
  labels:
    app: release-name-whatsapp-coreapp
spec:
  clusterIP: None
  ports:
  - port: 6250
    targetPort: 6250
    protocol: TCP
    name: messaging
  - port: 6251
    targetPort: 6251
    protocol: TCP
    name: contacts
  - port: 6252
    targetPort: 6252
    protocol: TCP
    name: control
  - port: 6253
    targetPort: 6253
    protocol: TCP
    name: healthcheck
  selector:
    name: release-name-whatsapp-coreapp
---
# Source: whatsapp/templates/master.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-whatsapp-master
  labels:
    app: release-name-whatsapp-master
spec:
  clusterIP: None
  ports:
  - port: 6250
    targetPort: 6250
    protocol: TCP
    name: messaging
  - port: 6251
    targetPort: 6251
    protocol: TCP
    name: contacts
  - port: 6252
    targetPort: 6252
    protocol: TCP
    name: control
  - port: 6253
    targetPort: 6253
    protocol: TCP
    name: healthcheck
  selector:
    name: release-name-whatsapp-master
---
# Source: whatsapp/templates/mysql.yaml
kind: Service
apiVersion: v1
metadata:
  name: release-name-whatsapp-db
  labels:
    app: release-name-whatsapp-mysql
spec:
  selector:
    app: release-name-whatsapp-mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  type: ClusterIP
---
# Source: whatsapp/templates/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-whatsapp-web
  labels:
    app: release-name-whatsapp-web
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    name: release-name-whatsapp-web
---
# Source: whatsapp/templates/coreapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-whatsapp-coreapp
  labels:
    app: release-name-whatsapp-coreapp
spec:
  replicas: 3
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      name: release-name-whatsapp-coreapp
  template:
    metadata:
      labels:
        name: release-name-whatsapp-coreapp
    spec:
      restartPolicy: 
      containers:
      - name: whatsapp-coreapp
        image: "docker.whatsapp.biz/coreapp:v2.47.3"
        imagePullPolicy: Always
        resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
        command: ["/opt/whatsapp/bin/wait_on_mysql.sh", "/opt/whatsapp/bin/launch_within_docker.sh"]
        ports:
        - containerPort: 6250
          protocol: TCP
          name: messaging
        - containerPort: 6251
          protocol: TCP
          name: contacts
        - containerPort: 6252
          protocol: TCP
          name: control
        - containerPort: 6253
          protocol: TCP
          name: healthcheck
        volumeMounts:
        - name: whatsapp-media
          mountPath: /usr/local/wamedia
      volumes:
      - name: whatsapp-media
        persistentVolumeClaim:
          claimName: release-name-whatsapp
---
# Source: whatsapp/templates/master.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-whatsapp-master
  labels:
    app: release-name-whatsapp-master
spec:
  replicas: 3
  strategy:
    type: Recreate
    rollingUpdate: null
  selector:
    matchLabels:
      name: release-name-whatsapp-master
  template:
    metadata:
      labels:
        name: release-name-whatsapp-master
        release: release-name-whatsapp
    spec:
      restartPolicy: 
      containers:
      - name: whatsapp-master
        image: "docker.whatsapp.biz/coreapp:v2.47.3"
        imagePullPolicy: Always
        resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
        command: ["/opt/whatsapp/bin/wait_on_mysql.sh", "/opt/whatsapp/bin/launch_within_docker.sh"]
        ports:
        - containerPort: 6250
          protocol: TCP
          name: messaging
        - containerPort: 6251
          protocol: TCP
          name: contacts
        - containerPort: 6252
          protocol: TCP
          name: control
        - containerPort: 6253
          protocol: TCP
          name: healthcheck
        volumeMounts:
        - name: whatsapp-media
          mountPath: /usr/local/wamedia
      volumes:
      - name: whatsapp-media
        persistentVolumeClaim:
          claimName: release-name-whatsapp
---
# Source: whatsapp/templates/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-whatsapp-mysql
  labels:
    app: release-name-whatsapp-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-whatsapp-mysql
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: release-name-whatsapp-mysql
    spec:
      containers:
      - name: mysql
        image: "mysql:5.7.21"
        resources:
            null
        args:
          - "--ignore-db-dir=lost+found"
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: configurations
          mountPath: /etc/mysql/conf.d/mysql.cnf
          subPath: mysql.cnf
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: release-name-whatsapp-mysql-pvc
      - name: configurations
        configMap:
          name: release-name-whatsapp-configuration
---
# Source: whatsapp/templates/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-whatsapp-web
  labels:
    app: release-name-whatsapp-web
spec:
  replicas: 2
  selector:
    matchLabels:
      name: release-name-whatsapp-web
  template:
    metadata:
      labels:
        name: release-name-whatsapp-web
    spec:
      restartPolicy: 
      containers:
      - name: whatsapp-web
        image: "docker.whatsapp.biz/web:v2.47.3"
        imagePullPolicy: Always
        resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 64Mi
        ports:
        - containerPort: 443
          protocol: TCP
          name: https
        command: ["/opt/whatsapp/bin/wait_on_mysql.sh", "/opt/whatsapp/bin/launch_within_docker.sh"]
        volumeMounts:
        - name: whatsapp-media
          mountPath: /usr/local/wamedia
        livenessProbe:
          exec:
            command:
            - 'bash'
            - '-c'
            - 'curl --fail -k https://localhost:443/v1/health --header "Authorization: Apikey ${WA_API_KEY}"'
          initialDelaySeconds: 30
          periodSeconds: 15
      volumes:
      - name: whatsapp-media
        persistentVolumeClaim:
          claimName: release-name-whatsapp
---
# Source: whatsapp/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-whatsapp
  labels:
    chart: "whatsapp-0.1.8"
spec:
  tls:
    - hosts:
        - "domain.net"
      secretName: tls-secret
  rules:
  - host: "domain.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: release-name-whatsapp
              port:
                number: 443
